update : templateModule (container draggable)

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="bower_components/sweetalert/dist/sweetalert.css"/>
     <link rel="stylesheet" href="bower_components/angular-ui-tree/dist/angular-ui-tree.min.css">
     <link rel="stylesheet" href="bower_components/highcharts/css/highcharts.css">
+    <link rel="stylesheet" href="bower_components/angularjs-slider/dist/rzslider.min.css"/>
 
     <link rel="stylesheet" href="custom_components/angular-ui-grid-3.0.7/less/main.css" />
 
@@ -79,6 +80,7 @@
     <script src="bower_components/sweetalert/dist/sweetalert.min.js"></script>
     <script src="bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>
     <script src="bower_components/highcharts/highcharts.js"></script>
+    <script src="bower_components/angularjs-slider/dist/rzslider.min.js"></script>
 
     <script src="custom_components/angular-uuid/angular-uuid.js"></script>
     <script src="custom_components/jsonPath/jsonPath.js"></script>
