--- a/app/modules/login/login.html
+++ b/app/modules/login/login.html
@@ -48,7 +48,7 @@
       </div>
       <div class="form-group user-login-input ">
         <label class="select--language--title" translate="MODULES_LOGIN_LANGUAGE">语　言</label><md-input-container class="select--language--box">
-          <md-select class="select--language--box__select" ng-model="vm.user.language" ng-init="vm.user.language = 'cn'">
+          <md-select ng-change="vm.changeLanguage(vm.user.language)" class="select--language--box__select" ng-model="vm.user.language" ng-init="vm.user.language = 'cn'">
             <md-option  value="en" >
               English
             </md-option>
