--- a/app/modules/serviceWatch/serviceWatch.html
+++ b/app/modules/serviceWatch/serviceWatch.html
@@ -20,7 +20,7 @@
                     <th translate="MODULES_SERVICEWATCH_OPERATION">操作</th>
                 </tr>
                 </thead>
-                <tbody  ng-repeat="data in vm.gridOptions.data">
+                <tbody class="service--watch--table_tbody" ng-repeat="data in vm.gridOptions.data">
                     <tr class="service--watch--table_tr" ng-click="vm.checkMission(data,$event);data.showMission=!data.showMission">
                         <td><span class="glyphicon glyphicon-tasks"></span>&nbsp;&nbsp;{{data.id}}</td>
                         <td>{{data.jobName}}</td>
@@ -54,23 +54,33 @@
                     </tr>
                     <tr class="missionList service--watch--table_tr" ng-show="data.showMission">
                         <td colspan="7">
-                            <div ng-show="data.missionList.length == 0" class="no--task--box" >
+                            <div ng-show="data.missionList.length == 0 || data.ermsLists.length == 0" class="no--task--box" >
                                 <span class="attr--box no--task" translate="MODULES_SERVICEWATCH_NO_TASK">没有任务</span>
                             </div>
-                            <div ng-repeat="missionList in data.missionList" class="mission--list--spread--box">
+                            <div ng-show="data.ermsLists.length > 0" ng-repeat="ermsLists in data.ermsLists" class="mission--list--spread--box">
+                                <span class="attr--box">ID：{{ermsLists.id}}</span>
+                                <span class="attr--box">启动次数：{{ermsLists.startTime}}</span>
+                                <span class="attr--box">最后一次启动时间：{{ermsLists.startTime | date:'yyyy.MM.dd HH:mm:ss'}}</span>
+                                <span class="attr--box">导入ERMS数据数量包：{{ermsLists.importErmsCount}}</span>
+                                <span class="attr--box"><span >占总量百分比</span>：
+                                    <uib-progressbar ng-show="missionList.aipPackageCount == 0" class="progress-striped active progress--info" type="success" value="(ermsLists.importErmsCount/ermsLists.aipPackageCount)*100"></uib-progressbar><span ng-show="missionList.aipPackageCount == 0">{{(ermsLists.importErmsCount/ermsLists.aipPackageCount)*100}}&nbsp;%</span>
+                                    <uib-progressbar ng-show="missionList.aipPackageCount != 0" class="progress-striped active progress--info" type="success" value="0"></uib-progressbar><span ng-show="missionList.aipPackageCount != 0">0&nbsp;%</span>
+                                </span>
+                            </div>
+                            <div ng-show="data.missionList.length > 0" ng-repeat="missionList in data.missionList" class="mission--list--spread--box">
                                 <span class="attr--box">ID：{{missionList.id}}</span>
                                 <span class="attr--box"><span translate="MODULES_BATCH_BATCH_NUMBER">批次号</span>：{{missionList.batchCode}}</span>
                                 <span class="attr--box date" ng-if="missionList.batchStatus==4"><span translate="MODULES_SERVICEWATCH_TASK_START_TIME">任务开始时间</span>：{{missionList.packageAipStartDate | date:'yyyy.MM.dd HH:mm:ss'}}</span>
                                 <span class="attr--box date" ng-if="missionList.batchStatus==0"><span translate="MODULES_SERVICEWATCH_TASK_START_TIME">任务开始时间</span>：{{missionList.packageAiuStartDate | date:'yyyy.MM.dd HH:mm:ss'}}</span>
                                 <span class="attr--box date" ng-if="missionList.batchStatus==2"><span translate="MODULES_SERVICEWATCH_TASK_START_TIME">任务开始时间</span>：{{missionList.packageSipStartDate | date:'yyyy.MM.dd HH:mm:ss'}}</span>
-                                <span class="attr--box"><span translate="MODULES_SERVICEWATCH_PACKET_PROFICIENCY">数据包熟练</span>：
+                                <span class="attr--box data--count"><span translate="MODULES_SERVICEWATCH_PACKET_PROFICIENCY">成功数量</span>：
                                     <span  ng-if="missionList.batchStatus==4"> {{missionList.aipCount || 0}}</span>
                                     <span  ng-if="missionList.batchStatus==0"> {{missionList.aiuCount || 0}}</span>
                                     <span  ng-if="missionList.batchStatus==2"> {{missionList.aiu2sipSuccessCount || 0}}</span>
                                     {{missionList.aiu2sipSuccessCount}}</span>
                                 <span class="attr--box"><span translate="MODULES_SERVICEWATCH_SCHEDULE">进度</span>：
                                     <uib-progressbar ng-show="!missionList.progress" class="progress-striped active progress--info" type="success" value="0"></uib-progressbar>
-                                    <uib-progressbar ng-show="missionList.progress" class="progress-striped active progress--info" type="success" value="missionList.progress"></uib-progressbar>{{missionList.progress || 0}}%
+                                    <uib-progressbar ng-show="missionList.progress" class="progress-striped active progress--info" type="success" value="missionList.progress"></uib-progressbar>{{missionList.progress || 0}}&nbsp;%
                                 </span>
                             </div>
                         </td>
