--- a/app/modules/statistics/statistics.html
+++ b/app/modules/statistics/statistics.html
@@ -1,52 +1,57 @@
 <div class="anim-slide-left statistics--wrap">
     <div class="statistics--wrap_data--count" >
         <div class="cell-box">
-            <span class="fa fa-database "></span>
+            <span class="fa fa-database color-one"></span>
             <div class="data--description">
                 <p class="head">对接系统数量</p>
-                <span class="data--value color-one">2 个</span>
+                <span class="data--value">2 个</span>
             </div>
         </div>
         <div class="cell-box">
-            <span class="fa fa-university"></span>
+            <span class="fa fa-university color-two"></span>
             <div class="data--description">
                 <p class="head">业务单位数量</p>
-                <span class="data--value color-two">34 家</span>
+                <span class="data--value">34 家</span>
             </div>
         </div>
         <div class="cell-box">
-            <span class="fa fa-cubes"></span>
-            <div class="data--description">
-                <p class="head">归档记录数量</p>
-                <span class="data--value color-three">15436 条</span>
-            </div>
-        </div>
-        <div class="cell-box">
-            <span class="fa fa-hdd-o" style="font-size: 28px"></span>
-            <div class="data--description">
-                <p class="head">数据总量</p>
-                <span class="data--value color-four">25 GB</span>
-            </div>
-        </div>
-        <div class="cell-box">
-            <span class="fa fa-stack-overflow"></span>
-            <div class="data--description">
-                <p class="head">数据被调用次数</p>
-                <span class="data--value color-five">11423 条</span>
-            </div>
-        </div>
-        <div class="cell-box">
-            <span class="fa fa-paper-plane-o"></span>
+            <span class="fa fa-paper-plane-o color-three"></span>
             <div class="data--description">
                 <p class="head">涉及业务数量</p>
-                <span class="data--value color-six">233 个</span>
+                <span class="data--value">233 个</span>
             </div>
         </div>
+        <div class="cell-box">
+            <span class="fa fa-cubes color-four"></span>
+            <div class="data--description">
+                <p class="head">归档记录数量</p>
+                <span class="data--value">15436 条</span>
+            </div>
+        </div>
+        <div class="cell-box">
+            <span class="fa fa-hdd-o color-five" style="font-size: 28px"></span>
+            <div class="data--description">
+                <p class="head">数据总量</p>
+                <span class="data--value">25 GB</span>
+            </div>
+        </div>
+        <div class="cell-box">
+            <span class="fa fa-stack-overflow color-six"></span>
+            <div class="data--description">
+                <p class="head">数据被调用次数</p>
+                <span class="data--value">11423 条</span>
+            </div>
+        </div>
+
     </div>
 
     <div class="statistics--wrap_data--form clearfix">
        <h4 class="data--form--head">月度归档数据量</h4>
        <div class="condition--filter--box" >
+           <md-select style="width: 95px;" ng-model="vm.parameter.unit" ng-change="vm.getRecordNum()">
+               <md-option ng-repeat="unitLists in vm.unitLists" ng-value="unitLists" >{{unitLists}}</md-option>
+               <md-option ng-value="'all'" >所有单位</md-option>
+           </md-select>
            <md-select style="width: 95px;" ng-model="vm.parameter.year" ng-change="vm.getRecordNum()">
                <md-option ng-repeat="year in vm.yearLists" ng-value="year" >{{year}}</md-option>
                <md-option ng-value="'all'" >所有年度</md-option>
@@ -57,7 +62,8 @@
            </md-select>
            <md-button></md-button>
        </div>
-       <div class="" id="container"  style="width: 100%"></div>
+       <div class="" id="container" ng-show="vm.parameter.unit=='all'" style="width: 100%"></div>
+        <div class="" id="containerOfUnit" ng-show="vm.parameter.unit!='all'"  style="width: 100%"></div>
     </div>
 
     <!--<div class="row" >-->
