--- a/app/modules/projectManage/projectEdit/basicData/basicData.html
+++ b/app/modules/projectManage/projectEdit/basicData/basicData.html
@@ -1,9 +1,9 @@
 <div class="anim-slide-left basic--data--show--wrap" >
     <md-toolbar class="md-menu-toolbar edit--project--manage--head-box">
         <div class="md-toolbar-tools">
-            <md-button class="md-icon-button edit--project--manage--head--btn" ng-click="vm.cancel()">
+            <div class="md-icon-button edit--project--manage--head--btn">
                 <a ui-sref="infoArchives.projectManage" class="fa fa-angle-left"></a>
-            </md-button>
+            </div>
             <a  ui-sref="infoArchives.projectManage" class="project--manage--head" translate="MODULES_PROJECTMANAGE_SYSTEM_ACCESS">系统接入</a>
             <span class="fa fa-angle-right"></span>
             <span class="current--column">{{vm.entity.projectName}}</span>
