--- a/app/modules/projectManage/projectEdit/moduleTemplate/backups/moduleTemplate.html
+++ b/app/modules/projectManage/projectEdit/moduleTemplate/backups/moduleTemplate.html
@@ -181,7 +181,7 @@
                                         </md-menu-item>
                                     </md-menu-content>
                                 </md-menu>
-                                <span class="glyphicon glyphicon-remove" style="float: right;color:red" ng-click="list.data.splice($index, 1)"></span>
+                                <span class="glyphicon glyphicon-remove single--configure--info__remove" ng-click="list.data.splice($index, 1)"></span>
                             </div>
                         </li>
                     </ul>
