--- a/app/modules/serviceWatch/serviceWatch.html
+++ b/app/modules/serviceWatch/serviceWatch.html
@@ -3,7 +3,7 @@
         <md-list-item class="md-2-line service--watch--prompt--wrap">
             <div class="md-list-item-text">
                 <h3 class="title" translate="MODULES_SERVICEWATCH_SERVICE_MONITORING">服务监控</h3>
-                <p class="prompt--content" translate="MODULES_SERVICEWATCH_SERVICE_STATUS_OF_INFOARCHIVES_IS_HERE">InfoArchives的服务状态在此显示</p>
+                <p class="prompt--content" translate="MODULES_SERVICEWATCH_SERVICE_STATUS_OF_INFOARCHIVES_IS_HERE">服务状态在此显示</p>
             </div>
         </md-list-item>
     </md-content>
