--- a/app/modules/connectMap/connectMap.html
+++ b/app/modules/connectMap/connectMap.html
@@ -3,21 +3,21 @@
         <div class="cell-box">
             <span class="fa fa-database "></span>
             <div class="data--description">
-                <p class="head">对接系统数量</p>
-                <span class="data--value color-one">2个</span>
+                <p class="head" translate="MODULES_DATABASE_NUMBER_OF_DOCKING_SYSTEMS">对接系统数量</p>
+                <span class="data--value color-one">2 <span translate="PROJECT_CONNECTMAP_NUM">个</span></span>
             </div>
         </div>
         <div class="cell-box">
             <span class="fa fa-cubes"></span>
             <div class="data--description">
-                <p class="head">归档记录数量</p>
+                <p class="head" translate="PROJECT_CONNECTMAP_ARCHIVED_RECORD_QUANTITY">归档记录数量</p>
                 <span class="data--value color-two">15436条</span>
             </div>
         </div>
         <div class="cell-box">
             <span class="fa fa-hdd-o" style="font-size: 28px"></span>
             <div class="data--description">
-                <p class="head">数据总量</p>
+                <p class="head" translate="MODULES_DATABASE_TOTAL_DATA_CAPACITY">数据总容量</p>
                 <span class="data--value color-three">25GB</span>
             </div>
         </div>
